@@ -1,45 +1,33 @@
-<div ng-controller="NodeListController">
+<div ng-controller="NodeListController" class="side-bar node-side-bar" ng-show="renderSidebar">
 
-  <div class="side-bar node-side-bar" ng-show="renderSidebar">
-
-    <div class="side-bar__header node-list__header">
+    <div class="node-list__header">
       <div class="node-list__header__title">
         {{ 'NODE.NODES' | translate }}
       </div>
-      <div class="node-list__header__order">
-        <a ng-click="sortBy('name')" class="node-list__header__btn"><i ng-class="sortClass('name')"></i> {{ 'NODE.NAME' | translate }}</a>
-        <a ng-click="sortBy('health_value')" class="node-list__header__btn"><i ng-class="sortClass('health_value')"></i> {{ 'NODE.HEALTH' | translate }}</a>
-      </div>
+      <div ng-click="sortBy('name')" class="node-list__header__btn"><i ng-class="sortClass('name')"></i> {{ 'NODE.NAME' | translate }}</div>
+      <div ng-click="sortBy('health_value')" class="node-list__header__btn"><i ng-class="sortClass('health_value')"></i> {{ 'NODE.HEALTH' | translate }}</div>
     </div>
 
     <div class="node-list">
-      <div class="side-bar__element node-list__element" ng-repeat="node in nodes | orderBy:sort.col:sort.desc track by node.id" ng-class="{ 'active': isActive(node) }">
-        <a ng-href="#/nodes/{{ node.id }}">
+      <div class="side-bar__element node-list__element" ng-repeat="node in nodes | orderBy:sort.col:sort.desc track by node.id" ng-class="{ 'active': isActive(node) }" ng-click="goToPath(node.id)">
+
           <div class="node-list__element__header">
-            <div class="node-list__element__row">
-              <div class="node-list__element__cell">
-                <h3>{{ node.name }}</h3>
-              </div>
-              <div class="node-list__element__cell">
-                <span ng-if="node.master_node" class="health-bubble node-list__element__cell--master" data-toggle="tooltip" rel="tooltip" title="Master node"></span>
-                <span class="health-bubble {{ node.health.status | healthPanelClass }}" title="{{ node.health.status }}"></span>
-              </div>
-            </div>
+              <span class="node-name">{{ node.name }}</span>
+              <span ng-if="node.master_node" class="health-bubble node-list__element__cell--master" data-toggle="tooltip" rel="tooltip" title="Master node"></span>
+              <span class="health-bubble {{ node.health.status | healthPanelClass }}" title="{{ node.health.status }}"></span>
           </div>
+
           <div class="node-list__element__body">
-            <div class="node-list__element__row">
-              <div class="node-list__element__cell">
+            <div class="node-list__element__cell">
                 {{ node.hostname }}
-              </div>
             </div>
-            <div class="node-list__element__row">
-              <div class="node-list__element__cell" ng-class="{'cr-panel--warning': !isSameVersion(node.version)}">
+            <div class="node-list__element__cell" ng-class="{'cr-panel--warning': !isSameVersion(node.version)}">
                 {{ node.version.number }}
-              </div>
             </div>
-          </div>
-        </a>
+          </div> 
       </div>
     </div>
-  </div>
+
+
 </div>
+
