@@ -1,8 +1,8 @@
-<div ng-controller="TableListController">
+<div ng-controller="TableListController" class="side-bar table-side-bar" ng-show="renderSidebar">
 
-  <div class="side-bar table-side-bar" ng-show="renderSidebar">
     <div class="filter__wrapper">
-        <input id="tableFilter" ng-model="search.$" placeholder="Filter tables ..." type="text" focus="true"></input>
+
+        <input id="tableFilter" ng-model="search.$" placeholder="Filter tables ..." type="text" focus="true">
         <a ng-if="search.$" class="cr-clear-filters" ng-click="search.$ = '' ">
             <i class="fa fa-times-circle" aria-hidden="true"></i>
         </a>
@@ -12,21 +12,22 @@
           </div>
           <div ng-if="collapsed" class="table__list__btn" ng-click="unCollapseAll()">
             <img class="collapse_btn" src="static/assets/icon-expand-all.svg"/>
-          </div>          
+          </div>  
+
         </div>
     </div>
 
-    
+
     <div class="table-list-wrapper">
       <div class="table-group" ng-repeat="type in tables track by $index">
         <div class="table__tab__header" id="table-nav-tab-header-{{$index}}" ng-class="isCollapsed($index) ? '' : 'table__tab__tab-header--selected'">
-          <a class="side-bar__header table__tab__header" href ng-click="toggleElements($index)">
+          <div class="side-bar__header table__tab__header" ng-click="toggleElements($index)">
             <i class="fa fa-caret-down" ng-class="{'fa-caret-down': !isCollapsed($index), 'fa-caret-right': isCollapsed($index)}"></i>
-            {{ type.display_name }} {{ 'TABLE.TITLE' | translate }}</a>
+            {{ type.display_name }} {{ 'TABLE.TITLE' | translate }}</div>
         </div>
 
         <div class="tables-list" id="tables-list--{{$index}}" ng-class="{'collapse': isCollapsed($index), 'in': !isCollapsed($index)}">
-          <div class="side-bar__element" ng-class="{ 'active': isActive(table.table_schema, table.name)}" ng-repeat="table in type.tables | filter:search track by $index">
+          <div class="side-bar__element tables-list__element" ng-class="{ 'active': isActive(table.table_schema, table.name)}" ng-repeat="table in type.tables | filter:search track by $index">
             <a href="#/tables/{{ table.table_schema }}/{{ table.name }}">
               <div class="table-name-row">
                 <div class="table-name">
@@ -46,5 +47,4 @@
         </div>
       </div>
     </div>
-  </div>
 </div>
